# zsh_config

./: .bashrc  .gitignore  .p10k.zsh  .zshrc
.bash_scripts/: install_zsh.sh
.config/git/: config  ignore
.config/go/telemetry/local/: asm@go1.24.2-go1.24.2-linux-amd64-2025-04-11.v1.count  asm@go1.25.0-go1.25.0-linux-amd64-2025-08-22.v1.count  asm@go1.25.0-go1.25.0-linux-amd64-2025-08-23.v1.count  asm@go1.25.0-go1.25.0-linux-amd64-2025-08-25.v1.count  cgo@go1.24.2-go1.24.2-linux-amd64-2025-04-11.v1.count  cgo@go1.25.0-go1.25.0-linux-amd64-2025-08-22.v1.count  compile@go1.24.2-go1.24.2-linux-amd64-2025-04-11.v1.count  compile@go1.25.0-go1.25.0-linux-amd64-2025-08-22.v1.count  compile@go1.25.0-go1.25.0-linux-amd64-2025-08-23.v1.count  compile@go1.25.0-go1.25.0-linux-amd64-2025-08-25.v1.count  go@go1.24.2-go1.24.2-linux-amd64-2025-04-11.v1.count  go@go1.25.0-go1.25.0-linux-amd64-2025-08-22.v1.count  go@go1.25.0-go1.25.0-linux-amd64-2025-08-23.v1.count  go@go1.25.0-go1.25.0-linux-amd64-2025-08-25.v1.count  gopls@v0.20.0-go1.25.0-linux-amd64-2025-08-22.v1.count  gopls@v0.20.0-go1.25.0-linux-amd64-2025-08-25.v1.count  (+6 more)
.config/htop/: htoprc
.config/nvim/: init.lua  lazy-lock.json  text.txt
.config/nvim/.undodir/: %home%huacc%.config%nvim%lua%config%lazy.lua  %home%huacc%.config%nvim%lua%config%plugins%lspconfig.lua  %home%huacc%.config%nvim%lua%config%plugins%mason.lua
.config/nvim/lua/: api.lua  commands.lua  global_vars.lua  key_maps.lua  keymaps.lua  options.lua  vim_commands.lua
.config/oh-my-posh/: zen.toml
.config/oh-my-posh/.undodir/: %home%huacchob%.config%oh-my-posh%zen.toml
.config/pypoetry/: pyproject.toml
.config/wslu/: triggered_time
.gemini/: GEMINI.md
.undodir/: %home%huacc%ollama-learn%langchain_scripts%final_rag_voice.py
.zsh_scripts/: aliases  bindings  dependencies  exports  expressions  functions
(+33 files in other folders)
