[tool.poetry]
name = "poetry-instance"
version = "2.1.2"
description = "Global Python tooling environment (Poetry, linters, formatters, etc.)"
authors = []
license = ""
package-mode = false

[tool.poetry.dependencies]
python = "3.13.3"
poetry = "^2.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
mypy = "^1.18.0"
pytest = "^9.0.0"
pytest-mock = "^3.15.0"
pytest-cov = "^7.0.0"
pytest-ruff = "^0.5"
pytest-mypy = "^1.0.0"
pytest-vcr = "^1.0.0"
ipython = "^9.7.0"
vcrpy = "^7.0.0"

[tool.poetry.group.additional.dependencies]
poetry-plugin-shell = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 10
show_missing = true

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true
show-fixes = true
extend-exclude = [
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache"
]
respect-gitignore = true
line-length = 120
select = ["ALL"]
ignore = [
  "D203",
  "D213",
  "D413",
  "G004",
  "S101",
  "S501",
  "FA100",
  "COM812",
  "CPY001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = []
combine-as-imports = true
force-sort-within-sections = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-config",
    "--ruff-format",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
